[gd_scene load_steps=5 format=2]

[ext_resource path="res://Hud/MenuButtons/ContainerTextMenuButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Hud/MenuButtons/LoadGame.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/MainForest/SaveIcon_1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/MainForest/SaveIcon_2.png" type="Texture" id=4]

[node name="LoadGame" type="TextureButton"]
margin_left = 181.0
margin_top = 27.0
margin_right = 313.0
margin_bottom = 151.0
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 3 )
expand = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerText" parent="." instance=ExtResource( 1 )]
margin_left = -97.46
margin_top = 2.72
margin_right = 5.201
margin_bottom = 0.989998

[connection signal="focus_entered" from="." to="." method="_on_LoadGame_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_LoadGame_focus_exited"]
